New components added: clear button, reset button, cog

--- a/index.html
+++ b/index.html
@@ -32,5 +32,30 @@
     <a id="tapToTop" href="#top" title="Top of page" class="shown">Top of page<span class="circumflex"><span class="bar"></span><span class="bar"></span></span></a>
 </div>
 
+<link rel="stylesheet" type="text/css" href="src/clearBtn.css" />
+<div class="frm">
+    <div class="clearBtn">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <input type="reset" value="Clear" />
+    </div>
+</div>
+
+<link rel="stylesheet" type="text/css" href="src/resetBtn.css" />
+<div class="frm">
+    <div role="button" arial-label="Reset" id="resetBtn"></div>
+</div>
+
+<link rel="stylesheet" type="text/css" href="src/cog.css" />
+<div class="frm light">
+    <div class="cog">
+        <div class="tooth"></div>
+        <div class="tooth"></div>
+        <div class="tooth"></div>
+        <div class="tooth"></div>
+        <div class="hub"></div>
+    </div>
+</div>
+
 </body>
 </html>
