--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ YUI().use('node', function (Y) {
 
 <h1>CSS Components</h1>
 
-<p>These are 'built graphics' made entirely from CSS, no imgages. They are therefore resolution independent, scalable, lightweight, and Retina-display ready. Also, they are
+<p>These are 'built graphics' made entirely from CSS, no images. They are therefore resolution independent, scalable, lightweight, and Retina-display ready. Also, they are
     more malleable than an image. You can easily tweak the colors, animation timing, etc. to suit your purpose.</p>
 
 <p>This collection continues to grow over time so <a href="https://github.com/jamesalley/CSS-Components">watch this project on Github</a>.</p>
